--- a/.github/workflows/java-app.yml
+++ b/.github/workflows/java-app.yml
@@ -22,5 +22,13 @@ jobs:
         java-version: '17'
 
     - name: Build with Maven
+      run: mvn -B test
+
+    - name: Generate JaCoCo Badge
+      uses: cicirello/jacoco-badge-generator@v2
+      with:
+        generate-branches-badge: true
+
+    - name: Build with Maven
       run: mvn -B package --file pom.xml
 
