--- a/.github/workflows/java-app.yml
+++ b/.github/workflows/java-app.yml
@@ -16,6 +16,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+      with:
+        persist-credentials: false
+        fetch-depth: 0
     - uses: actions/setup-java@v3
       with:
         distribution: 'corretto'
