--- a/.github/workflows/java-app.yml
+++ b/.github/workflows/java-app.yml
@@ -17,7 +17,6 @@ jobs:
     steps:
     - uses: actions/checkout@v3
       with:
-        persist-credentials: false
         fetch-depth: 0
     - uses: actions/setup-java@v3
       with:
@@ -34,6 +33,11 @@ jobs:
 
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+
+    - name: Log coverage percentage
+      run: |
+        echo "coverage = ${{ steps.jacoco.outputs.coverage }}"
+        echo "branch coverage = ${{ steps.jacoco.outputs.branches }}"
 
     - name: Commit the badge (if it changed)
       run: |
